# k-artical-dj

./: .env  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  readme.md
article/: admin.py  decorators.py  logging.py  metrics.py  middleware.py  models.py  readme.md  serializer.py  tests.py  urls.py  views.py
article/migrations/: 0001_initial.py
k_exam/: asgi.py  readme.md  settings.py  urls.py  wsgi.py
nginx/: default.conf.template
prometheus/: prometheus_config.yml
